# eda-agent

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/: FUNDING.yml
scripts/altium/: Altium_API.PrjScr  Application.pas  Dispatcher.pas  Generic.pas  Library.pas  Main.pas  PCB.pas  PCBGeneric.pas  Project.pas  SelfTest.pas  StatusForm.dfm  StatusForm.pas  Utils.pas  build.py
src/eda_agent/: __init__.py  __main__.py  cli.py  config.py  preconditions.py  scope.py  server.py
src/eda_agent/bridge/: __init__.py  altium_bridge.py  exceptions.py  process_manager.py  script_launcher.py
src/eda_agent/models/: __init__.py  components.py  layers.py  primitives.py  rules.py
src/eda_agent/schemas/: __init__.py  commands.py  envelope.py  registry.py  scope.py
src/eda_agent/tools/: __init__.py  application.py  bulk_hints.py  datasheet_hints.py  generic.py  library.py  pcb.py  project.py  review.py  sim.py
tests/: __init__.py  altium_simulator.py  conftest.py  cross_validate_pascal.pas  test_batch_tools.py  test_bridge.py  test_bulk_hints.py  test_connectivity_batch.py  test_connectivity_freshness.py  test_cross_validate.py  test_datasheet_hints.py  test_delphiscript_lint.py  test_delphiscript_logic.py  test_e2e_integration.py  test_filter_matching.py  test_ipc_integration.py  test_json_parsing.py  test_pascal_logic.pas  test_pascal_runner.py  test_real_pascal.pas  test_regression.py  test_review.py  test_sim.py  test_stress.py
tests/integration/: __init__.py  conftest.py  test_round_trip.py
tests/integration/fixtures/: EDAAgentTest.PcbDoc  EDAAgentTest.PrjPcb  EDAAgentTest.SchDoc  README.md  SELibrary_INTEGRATION.SchLib
tests/test_tools/: __init__.py
