[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eda-agent"
version = "0.1.0"
description = "MCP server for EDA tool automation — currently supports Altium Designer. 150+ tools for schematic, PCB, and library ops via DelphiScript bridge."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "George Saliba", email = "george.saliba@salitronic.com" }
]
keywords = ["altium", "mcp", "pcb", "eda", "schematic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "psutil>=5.9.0",
    "pywin32>=306",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
eda-agent = "eda_agent.server:main"

[project.urls]
Homepage = "https://github.com/salitronic/eda-agent"
Repository = "https://github.com/salitronic/eda-agent"
Issues = "https://github.com/salitronic/eda-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/eda_agent"]
# The .pas / .PrjScr files are not recognised as Python package data by
# default -- force-include them explicitly. The scripts/altium/ tree stays
# on disk as the dev source of truth; the wheel gets a copy under
# eda_agent/scripts/ so `eda-agent install-scripts` can find it.
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.tmp.*",
]

[tool.hatch.build.targets.wheel.force-include]
"scripts/altium/Main.pas" = "eda_agent/scripts/Main.pas"
"scripts/altium/Utils.pas" = "eda_agent/scripts/Utils.pas"
"scripts/altium/Application.pas" = "eda_agent/scripts/Application.pas"
"scripts/altium/Project.pas" = "eda_agent/scripts/Project.pas"
"scripts/altium/Library.pas" = "eda_agent/scripts/Library.pas"
"scripts/altium/PCBGeneric.pas" = "eda_agent/scripts/PCBGeneric.pas"
"scripts/altium/PCB.pas" = "eda_agent/scripts/PCB.pas"
"scripts/altium/Generic.pas" = "eda_agent/scripts/Generic.pas"
"scripts/altium/Dispatcher.pas" = "eda_agent/scripts/Dispatcher.pas"
"scripts/altium/SelfTest.pas" = "eda_agent/scripts/SelfTest.pas"
"scripts/altium/Altium_API.PrjScr" = "eda_agent/scripts/Altium_API.PrjScr"

[tool.hatch.build.targets.sdist]
include = [
    "src/eda_agent",
    "scripts/altium/*.pas",
    "scripts/altium/*.PrjScr",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.tmp.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
